# V4L2-camera-application-for-i.MX6ULL

./: .gitignore  CMakeLists.txt  DESIGN.md  LICENSE  Makefile  README.md  run_perf.sh  toolchain-imx6ull.cmake  代码学习路线.md  性能测试方案.md  技术文档_重构说明.md  测试结果.md  面试_测试与性能优化.md  面试文档.md
include/: camera_app.h  capture_thread.h  frame_buffer.h  image_processor.h  photo_manager.h  v4l2_compat.h  v4l2_device.h
src/: camera_app.cpp  capture_thread.cpp  frame_buffer.cpp  image_processor.cpp  main.cpp  photo_manager.cpp  v4l2_device.cpp
tests/: CMakeLists.txt  stress_test.cpp  test_framework.h  test_image_processor.cpp  test_main.cpp  test_photo_manager.cpp
